--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "gatsby-plugin-sharp": "^2.6.2",
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-prismjs-dracula": "^0.1.15",
+    "gatsby-remark-prismjs": "^3.7.0",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.10.0",
     "gatsby-transformer-sharp": "^2.5.2",
     "polished": "^3.6.5",
+    "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
