--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-prismjs-dracula": "^0.1.15",
+    "gatsby-remark-images": "^3.5.1",
+    "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-prismjs": "^3.7.0",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.10.0",
     "gatsby-transformer-sharp": "^2.5.2",
+    "lazysizes": "^5.2.2",
     "polished": "^3.6.5",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
