--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.22",
     "gatsby-plugin-react-helmet": "^3.3.1",
@@ -28,7 +29,6 @@
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "styled-components": "^5.1.1",
