--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.22",
