--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "add": "^2.0.6",
     "algoliasearch": "^4.8.0",
     "babel-plugin-styled-components": "^1.10.7",
     "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
     "gatsby-plugin-sharp": "^2.6.2",
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-prismjs-dracula": "^0.1.15",
     "gatsby-remark-images": "^3.5.1",
@@ -27,6 +29,7 @@
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.10.0",
     "gatsby-transformer-sharp": "^2.5.2",
+    "gsap": "^3.5.1",
     "lazysizes": "^5.2.2",
     "polished": "^3.6.5",
     "prismjs": "^1.22.0",
@@ -37,7 +40,8 @@
     "react-instantsearch-dom": "^6.8.2",
     "styled-components": "^5.1.1",
     "styled-icons": "^10.11.0",
-    "styled-media-query": "^2.1.2"
+    "styled-media-query": "^2.1.2",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "prettier": "2.0.5"
