--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-manifest": "^2.4.2",
+    "gatsby-plugin-netlify-cms": "^4.8.0",
     "gatsby-plugin-offline": "^3.2.22",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.2",
@@ -31,6 +32,7 @@
     "gatsby-transformer-sharp": "^2.5.2",
     "gsap": "^3.5.1",
     "lazysizes": "^5.2.2",
+    "netlify-cms-app": "^2.14.10",
     "polished": "^3.6.5",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
