--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-disqus": "^1.2.2",
+    "gatsby-plugin-google-analytics": "^2.10.0",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-netlify-cms": "^4.8.0",
     "gatsby-plugin-offline": "^3.2.22",
