--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ GATSBY_ALGOLIA_APP_ID=XXX
 ALGOLIA_API_KEY=XXX
 GATSBY_ALGOLIA_SEARCH_KEY=XXX
 GATSBY_ALGOLIA_INDEX_NAME=XXX
+GOOGLE_ANALYTICS_ID=XXX
